Add interview postpone proposals with HR approve/reject and notifications.
Interviewers can propose an alternative time; HR can accept (reschedule) or decline, with in-app and email alerts to coordinators.